--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:e2e": "npx playwright test",
-    "test:e2e_login": "npx playwright test src/tests/e2e/login.spec.ts"
+    "test:e2e_login": "ENV=test npx playwright test src/tests/e2e/login.spec.ts",
+    "test:ui": "ENV=test npx playwright test --ui",
+    "test:codegen": "npx playwright codegen --load-storage=storageState.json https://test.busnetwork.net/"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,10 @@
   "type": "commonjs",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "aws-amplify": "^5.3.5"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1"
   }
 }
