--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:e2e": "npx playwright test",
-    "test:e2e_login": "npx playwright test src/tests/e2e/login.spec.ts"
+    "test:e2e_login": "npx playwright test src/tests/e2e/login.spec.ts",
+    "test:codegen": "npx playwright codegen https://test.busnetwork.net"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "dotenv": "^17.2.2"
   }
 }
