--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:e2e": "npx playwright test",
+    "test:ui": "npx playwright test --ui",
     "test:e2e_login": "npx playwright test src/tests/e2e/login.spec.ts",
+    "test:e2e_params": "npx playwright test src/tests/e2e/parameterized.spec.ts",
     "test:codegen": "npx playwright codegen https://test.busnetwork.net"
   },
   "keywords": [],
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.0",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.2"
   }
 }
